--- a/package.json
+++ b/package.json
@@ -14,12 +14,21 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js"
+    "build": "tsc",
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/rioam2/bstjs"
   },
   "author": "rioam2",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "@types/node": "^10.12.18"
+  }
 }
