--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "nodemon",
-    "testOnce": "mocha --reporter spec"
+    "testWatch": "nodemon",
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
