--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsc",
     "testWatch": "nodemon",
-    "test": "mocha --reporter spec"
+    "test": "./node_modules/mocha/bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "nodemon": "^1.18.9"
   },
   "dependencies": {
     "@types/node": "^10.12.18"
